# simple_variant

./: .clang-format  CMakeLists.txt
include/simple/: variant.hpp
test/: CMakeLists.txt  sv_test.cpp
